--- a/Project.toml
+++ b/Project.toml
@@ -17,9 +17,13 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 Metaheuristics = "bcdb8e00-2c21-11e9-3065-2b553b22f898"
 Nonconvex = "01bcebdf-4d21-426d-b5c4-6132c1619978"
+NonconvexMetaheuristics = "ece49558-7bf7-4b1b-9202-b5cfb4999bf7"
 NonconvexNLopt = "b43a31b8-ff9b-442d-8e31-c163daa8ab75"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
+
+[compat]
+NonconvexMetaheuristics = "0.1.2"
